# src/main/resources/swagger.yaml
@@ -91,6 +91,26 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/baseResDTO'
+
+  /base/deleteById:
+    delete:
+      tags:
+        - microservizio_base
+      summary: deleteById
+      description: deleteById
+      operationId: deleteById
+      parameters:
+        - name: id
+          in: query
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: deleteById
+
+
 components:
   schemas:
     baseReqDTO:
